--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8086
 spring.application.name=weather-microservice
+weather.api.base-url=https://api.openweathermap.org/data/2.5
+weather.api.key=86e8357f2aa94d448ec64d15d3b04153
